--- a/blog/static/blog/css/general.css
+++ b/blog/static/blog/css/general.css
@@ -7,6 +7,8 @@
 :root {
     --dark--blue: rgb(1,5,19);
     --mask--dark--blue: rgba(1, 5, 19, 0.8);
+    --action--color:rgb(0, 225, 255);
+    --swiper-theme-color: rgb(0, 225, 255);
 }
 @font-face {
     font-family: 'TiltNeon';
@@ -48,6 +50,7 @@ section:not(:first-child) {
 img {
     width: 100%;
 }
+
 /* .row {
     margin-bottom: 0 !important;
 } */
@@ -61,6 +64,10 @@ img {
     left: 0;
     bottom: 100%;
     font-size: 0.8em;
+}
+
+.color-action {
+    color: var(--action--color)  !important;
 }
 /* navbar */
 .nav-item {
@@ -116,7 +123,7 @@ main {
     font-size: 0.8em;
 }
 .small-icon {
-    width: 12px;
+    width: 12px !important;
     position: relative;
     top:-1px;
 }
