--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,6 +22,8 @@
     
     <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css'  %}">
     <link rel="stylesheet" href="{% static 'blog/css/general.css'  %}">
+    <link rel="stylesheet" href="{% static 'blog/css/footer.css'  %}">
+
     <script src="{% static 'blog/js/navbar.js' %}" ></script>
 
 
@@ -46,10 +48,12 @@
 
         
     </header>
+
     {% comment %} I anulate the paddings for customize the backgrounds {% endcomment %}
     <main class="container-xxl px-0">
         {% block main %}{% endblock main %}
     </main>
+    
     {% include "blog/home_components/footer.html" %}
 
 
