--- a/blog/templates/blog/home_components/footer.html
+++ b/blog/templates/blog/home_components/footer.html
@@ -1,1 +1,49 @@
-<h1>Footer</h1>
+{% load static %}
+<footer class="footer container-xxl py-3">
+    <div class="row">
+
+          <div class=" text-center text-md-start col-12 col-md-8">
+            <p class="fs-3">
+                Keiner Mendoza Site
+            </p>
+  
+          <p class="fs-5">
+            This website has the purpose of sharing my projects, as well as my ideas in the area of web development and programming in general.
+          </p>
+        </div>
+  
+        <div class="col-12 col-md-4">
+            <div class="row">
+
+                <ul class="col-6">
+                    <p>On this site</p>
+                    <li class="my-1"><a href="/">Homepage</a></li>
+                    <li class="my-1"><a href="/videos">Projects</a></li>
+                    <li class="my-1"><a href="/temas">Certificates</a></li>
+                </ul>
+                
+                <ul class="col-6 text-end">
+                    <p>
+                        My Social Networks
+                    </p>
+                    <li class="my-1"><a href="https://youtube.com/makigas" target="_blank">YouTube</a></li>
+                    <li class="my-1"><a href="https://foro.makigas.es" target="_blank">Foro</a></li>
+                    <li class="my-1"><a href="https://discord.com/invite/Mq7TBAB" target="_blank">Discord</a></li>
+                </ul>
+
+            </div>
+
+        </div>
+  
+  
+      <div class="col-12 text-center text-md-start">
+        <p>
+          <strong>Copyright © 2023 keinermendoza</strong><br>
+        </p>
+  
+        <p>Made by Keiner Mendoza with <span>  <img class="icon icon-footer-heart" src="{% static  'blog/icons/heart-solid.svg'%}" alt=""></span></p>
+      </div>
+
+
+    </div>
+</footer>
