--- a/blog/templates/blog/projects/project_list.html
+++ b/blog/templates/blog/projects/project_list.html
@@ -10,7 +10,7 @@
 {% block title %}Project Page{% endblock title %}
 
 {% block main %}
-<section class="projects container-fluid">
+<section class="projects container-fluid py-3">
     <h1 class="text-center pt-4 mb-4">Projects</h1>
     <article class="row gap-4 row-cols-1 row-cols-sm-2 row-cols-lg-3 d-flex justify-content-evenly child-max-400px">
         {% include "blog/home_components/project_components/project_card.html" with projects=projects %}
