change the about

--- a/blog/templates/blog/homepage.html
+++ b/blog/templates/blog/homepage.html
@@ -83,7 +83,11 @@
                     <div class="row  mx-0 d-flex flex-wrap justify-content-center justify-content-md-between ">
 
                         <p class=" col-12 col-md-5 my-4 my-md-0">
-                            I graduated from the Faculty of Economic Sciences with a Bachelor's degree in Economics. Subjects related to Computer Science always caught my attention, but it was not until 2022 that I really discovered the field of programming and since then I have not stopped delving deeper into the field of web development.
+                            I am a self-taught web developer. I like to solve problems, I started programming 
+                            in May 2022 and since then I have developed projects for friends, which has allowed 
+                            me to learn not only about technical requirements, but also about the development of 
+                            a product concept. I am currently looking for my first job in the software development 
+                            industry. I have a bachelor's degree in Economics.
                         </p>
                         <figure class="about-svg col-12 col-md-4  my-4 my-md-0">
                             <img class="" src="{% static 'blog/images/mobile_ds.svg' %}" alt="a person designing an mobile User interface">
@@ -97,7 +101,10 @@
                             <img class="" src="{% static 'blog/images/desktop_ds.svg' %}" alt="a person designing an desktop User interface">
                         </figure>
                         <p class=" col-12 col-md-5  my-4 my-md-0" >
-                            I consider myself a self-taught web developer, I have developed projects in my free time using different technologies, among which the django development framework stands out. I am currently looking for a job as a full-time web developer. I speak Spanish, some Portuguese, and I have a basic understanding of English. I currently live in Brazil.
+                            My favorite stack is Django, Bootsrap and Vanila Javascript, this site uses that stack, but I have also 
+                            made projects using Django Rest Framework and React, even with just HTML, CSS and JavaScript. As for Deploys,
+                             I have used VMs including the configuration of NGINX, Gunicorn, DNS and SSL, also some platforms such
+                            as Vercel or PythonAnywhere.
                         </p>
                     </div>
                 
